# Exercises4CppPL

./: makefile  mylib.cpp
Chapter 10/exercises 1/: main.cpp  mylib.h
Chapter 10/exercises 2/: exeMe  main.cpp
Chapter 13/Exercise 1/: header.h  main.cpp  makefile  vlib.cpp  vlib.hpp
Chapter 13/Exercise 10/: main.cpp  makefile  vlib.cpp  vlib.hpp
Chapter 13/Exercise 11/: main.cpp  prog  vlib.cpp  vlib.hpp
Chapter 13/Exercise 12/: main.cpp  vlib.cpp  vlib.hpp
Chapter 13/Exercise 16/: Error.cpp  Error.hpp  Lexer.cpp  Lexer.hpp  MacroProcessor.cpp  MacroProcessor.hpp  Parser.cpp  Parser.hpp  input.txt  main.cpp  makefile
Chapter 13/Exercise 17/: VSError.cpp  VSError.hpp  input.txt  main.cpp  makefile
Chapter 13/Exercise 18/: VSPrint.cpp  VSPrint.hpp  main.cpp  makefile
Chapter 13/Exercise 2/: header.h  main.cpp
Chapter 13/Exercise 21/: VSDate.cpp  VSDate.hpp  main.cpp  makefile
Chapter 13/Exercise 3/: main.cpp  vlib.cpp  vlib.hpp
Chapter 13/Exercise 4/: main.cpp  makefile  vlib.cpp  vlib.hpp
Chapter 13/Exercise 7/: helper.hpp  main.cpp  makefile  timer.cpp  timer.hpp  vlib.cpp  vlib.hpp
Chapter 13/Exercise 8/: main.cpp  prog  vlib.cpp  vlib.hpp
Chapter 13/Exercise 9/: main.cpp  vlib.cpp  vlib.hpp
Chapter 15/Exercise 2/: configure.ac  reconf
Chapter 15/Exercise 2/src/: Makefile.am  TokenParser.cpp  TokenParser.hpp  desk_calc.cpp  desk_calc.hpp  desk_calc_err.cpp  desk_calc_err.hpp
Chapter 15/Exercise 2/test/: Makefile.am  main.cpp
Chapter 15/Exercise 2/utest/: Makefile.am  TestMain.cpp
Chapter 15/Exercise 2/utest/src/: TestDeskCalc.cpp
(+13 files in other folders)
