#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([c15_x02], [0.0.1], [BUG@foo.com])
AC_CONFIG_SRCDIR([src/desk_calc.cpp])
AC_CONFIG_HEADERS([config.h])

LT_INIT

AC_CONFIG_FILES([Makefile
				src/Makefile
				test/Makefile
				utest/Makefile])

AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
